--- a/resources/fxml/StorageView.fxml
+++ b/resources/fxml/StorageView.fxml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.effect.ImageInput?>
-<?import javafx.scene.effect.InnerShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.company.game.controller.ShopViewController">
+<?import javafx.scene.effect.ImageInput?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.image.ImageView?>
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.company.game.controller.StorageViewController"
+            prefHeight="400.0" prefWidth="600.0">
     <children>
         <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -55,8 +57,8 @@
                 <Font name="Arial Bold" size="14.0"/>
             </font>
         </Label>
-        <Button blendMode="DIFFERENCE" layoutX="261.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleBuy"
-                prefHeight="40.0" prefWidth="79.0" text="Купить" textAlignment="CENTER">
+        <Button blendMode="DIFFERENCE" layoutX="261.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleClothe"
+                prefHeight="40.0" prefWidth="79.0" text="Одеть" textAlignment="CENTER">
             <font>
                 <Font name="Arial Bold" size="14.0"/>
             </font>
